fix(core): spacing module

--- a/src/core/style/action/module/_input.scss
+++ b/src/core/style/action/module/_input.scss
@@ -4,6 +4,7 @@
 ////
 
 @use 'module/reset';
+@use 'module/spacing';
 
 input,
 select,
@@ -33,5 +34,5 @@ input::-webkit-credentials-auto-fill-button {
   @include margin-left(4v);
   @include margin-right(-1px);
   @include size(5v, 5v);
-  mask-size: #{space(5v 5v)};
+  mask-size: #{spacing.space(5v 5v)};
 }
